--- a/assets/style.css
+++ b/assets/style.css
@@ -16,7 +16,7 @@
 body{
     background:var(--preta);
     font-family: 'Times New Roman', Times, serif;
-    color: white; 
+    color: white;
 }
 
 header .container{
@@ -32,6 +32,7 @@ header .logo{
     font-family: 'Arial Black';
     font-size: 30px;
     margin-left: 5px;
+    margin-right: 30px;
 }
 
 header nav a{
@@ -93,7 +94,6 @@ header nav a:hover{
     color: black;
 }
 
-
 .botao2{
     background-color: rgba(110, 93, 93, 0.411);
     border: none;
@@ -103,7 +103,6 @@ header nav a:hover{
     cursor: pointer;
     transition: .1s ease all;
     border-radius: 4%;
-    
 }
 
 .botao1:hover{
@@ -122,14 +121,31 @@ header nav a:hover{
     margin-right: 10px;
 }
 
-.elenco{
-    margin-top: 150px;
+.carrossel-filmes1{
+    background: -webkit-gradient(linear, left top, left bottom, from(#260100), to(#141414));
+    filter:progid:DXImageTransform.Microsoft.Gradient(GradientType=0, StartColorStr='#CCCCCC', EndColorStr='#000000');
+    
 }
 
+.elenco{
+    margin-left: 60px;
+}
+
+.em-alta{
+    margin-left: 60px;
+}
 .box-filme{
     height: 100%;
     width: 100%;
     display: block;
+    transition: .2s;
+    margin: 50px;
+    position: relative;
+}
+    
+
+.box-filme:hover{
+    transform: scale(1.2) translateY(-10px);
 }
 
 /*resposividade*/
